--- a/MouseAudioDisplay/MouseAudioDisplay.runs/impl_1/usage_statistics_webtalk.html
+++ b/MouseAudioDisplay/MouseAudioDisplay.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Mar 27 22:03:59 2023</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Mar 27 22:34:24 2023</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>3b7214cfe62a44289a7f91385db1e055</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>157</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>24f3e4d7-b840-4530-96b2-1c7b5a112d54</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>24f3e4d7-b840-4530-96b2-1c7b5a112d54</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>158</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>9b1d430f-d747-4622-8583-48873fe5aeb0</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>9b1d430f-d747-4622-8583-48873fe5aeb0</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>12th Gen Intel(R) Core(TM) i7-1255U</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2611 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 7 5700U with Radeon Graphics         </TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1797 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>14.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -35,8 +35,8 @@
    <TD>archiveprojectdialog_include_configuration_settings=5</TD>
    <TD>basedialog_cancel=170</TD>
    <TD>basedialog_no=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=128</TD>
-   <TD>basedialog_yes=218</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=130</TD>
+   <TD>basedialog_yes=220</TD>
    <TD>cmdmsgdialog_messages=2</TD>
    <TD>cmdmsgdialog_ok=88</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_create_file=1</TD>
@@ -44,10 +44,10 @@
    <TD>createsrcfiledialog_file_name=15</TD>
    <TD>definemodulesdialog_entity_name=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>expruntreepanel_exp_run_tree_table=8</TD>
-   <TD>filesetpanel_file_set_panel_tree=336</TD>
+   <TD>filesetpanel_file_set_panel_tree=355</TD>
    <TD>filtertoolbar_hide_all=1</TD>
    <TD>filtertoolbar_show_all=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=465</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=468</TD>
    <TD>fpgachooser_family=1</TD>
    <TD>fpgachooser_fpga_table=1</TD>
    <TD>fpgachooser_package=1</TD>
@@ -71,11 +71,11 @@
    <TD>mainmenumgr_view=2</TD>
    <TD>mainmenumgr_window=4</TD>
    <TD>mainwinmenumgr_layout=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=42</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=60</TD>
    <TD>msgview_critical_warnings=2</TD>
-   <TD>msgview_information_messages=1</TD>
+   <TD>msgview_information_messages=2</TD>
    <TD>msgview_status_messages=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=3</TD>
    <TD>pacommandnames_add_sources=10</TD>
    <TD>pacommandnames_archive_project=3</TD>
    <TD>pacommandnames_auto_connect_target=94</TD>
@@ -86,7 +86,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_project=1</TD>
    <TD>pacommandnames_open_target_wizard=1</TD>
    <TD>pacommandnames_zoom_fit=1</TD>
-   <TD>paviews_code=20</TD>
+   <TD>paviews_code=21</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=1</TD>
    <TD>paviews_schematic=1</TD>
    <TD>programdebugtab_available_targets_on_server=4</TD>
@@ -129,20 +129,21 @@
    <TD>openproject=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=44</TD>
    <TD>programdevice=88</TD>
-   <TD>runbitgen=250</TD>
-   <TD>runschematic=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
-   <TD>savefileproxyhandler=10</TD>
+   <TD>runbitgen=252</TD>
+   <TD>runimplementation=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runschematic=1</TD>
+   <TD>runsynthesis=1</TD>
+   <TD>savefileproxyhandler=11</TD>
    <TD>showview=24</TD>
-   <TD>toolssettings=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toolssettings=2</TD>
+   <TD>viewtaskimplementation=3</TD>
    <TD>viewtaskprojectmanager=25</TD>
    <TD>viewtaskrtlanalysis=5</TD>
-   <TD>zoomfit=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>zoomfit=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=30</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=32</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -183,17 +184,17 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=5</TD>
     <TD>carry4=325</TD>
-    <TD>fdre=845</TD>
+    <TD>fdre=846</TD>
     <TD>fdse=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=21</TD>
-    <TD>ibuf=10</TD>
-    <TD>ldce=28</TD>
-    <TD>lut1=281</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=565</TD>
-    <TD>lut3=298</TD>
-    <TD>lut4=468</TD>
-    <TD>lut5=645</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=1983</TD>
+    <TD>ibuf=12</TD>
+    <TD>ldce=29</TD>
+    <TD>lut1=282</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=568</TD>
+    <TD>lut3=300</TD>
+    <TD>lut4=460</TD>
+    <TD>lut5=646</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=1999</TD>
     <TD>muxf7=149</TD>
     <TD>muxf8=13</TD>
     <TD>obuf=37</TD>
@@ -206,18 +207,18 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=5</TD>
     <TD>carry4=325</TD>
-    <TD>fdre=845</TD>
+    <TD>fdre=846</TD>
     <TD>fdse=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=21</TD>
-    <TD>ibuf=8</TD>
+    <TD>ibuf=10</TD>
     <TD>iobuf=2</TD>
-    <TD>ldce=28</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=281</TD>
-    <TD>lut2=565</TD>
-    <TD>lut3=298</TD>
-    <TD>lut4=468</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut5=645</TD>
-    <TD>lut6=1983</TD>
+    <TD>ldce=29</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=282</TD>
+    <TD>lut2=568</TD>
+    <TD>lut3=300</TD>
+    <TD>lut4=460</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=646</TD>
+    <TD>lut6=1999</TD>
     <TD>muxf7=149</TD>
     <TD>muxf8=13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=37</TD>
@@ -275,8 +276,8 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>timing-17=362</TD>
-    <TD>timing-18=28</TD>
-    <TD>timing-20=28</TD>
+    <TD>timing-18=29</TD>
+    <TD>timing-20=29</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -309,7 +310,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.004856</TD>
+    <TD>clocks=0.004292</TD>
     <TD>confidence_level_clock_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -318,20 +319,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071778</TD>
+    <TD>devstatic=0.071779</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.036639</TD>
+    <TD>dynamic=0.037431</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.001528</TD>
+    <TD>i/o=0.001531</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.5 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.016411</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.016568</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -342,13 +343,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.108417</TD>
+    <TD>on-chip_power=0.109210</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=3.000000</TD>
-    <TD>pct_inputs_defined=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.000000</TD>
+    <TD>pct_inputs_defined=8</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -356,7 +357,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.013844</TD>
+    <TD>signals=0.015041</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -373,21 +374,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000053</TD>
+    <TD>vccaux_dynamic_current=0.000052</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012619</TD>
+    <TD>vccaux_static_current=0.012620</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012672</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.035203</TD>
-    <TD>vccint_static_current=0.009600</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.044803</TD>
+    <TD>vccint_dynamic_current=0.036000</TD>
+    <TD>vccint_static_current=0.009602</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.045601</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -409,9 +410,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000406</TD>
+    <TD>vcco33_dynamic_current=0.000405</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001406</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001405</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2018.2</TD>
 </TR>   </TABLE>
@@ -528,25 +529,25 @@
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=320</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=845</TD>
+    <TD>fdre_used=846</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=10</TD>
+    <TD>ibuf_used=12</TD>
     <TD>ldce_functional_category=Flop &amp; Latch</TD>
-    <TD>ldce_used=28</TD>
+    <TD>ldce_used=29</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=268</TD>
+    <TD>lut1_used=269</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=557</TD>
+    <TD>lut2_used=560</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=292</TD>
+    <TD>lut3_used=294</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=464</TD>
+    <TD>lut4_used=456</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=647</TD>
+    <TD>lut5_used=648</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=1981</TD>
+    <TD>lut6_used=1997</TD>
 </TR><TR ALIGN='LEFT'>    <TD>muxf7_functional_category=MuxFx</TD>
     <TD>muxf7_used=149</TD>
     <TD>muxf8_functional_category=MuxFx</TD>
@@ -570,27 +571,27 @@
     <TD>f8_muxes_util_percentage=0.16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=3684</TD>
-    <TD>lut_as_logic_util_percentage=17.71</TD>
+    <TD>lut_as_logic_used=3703</TD>
+    <TD>lut_as_logic_util_percentage=17.80</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=853</TD>
+    <TD>register_as_flip_flop_used=854</TD>
     <TD>register_as_flip_flop_util_percentage=2.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
-    <TD>register_as_latch_used=28</TD>
+    <TD>register_as_latch_used=29</TD>
     <TD>register_as_latch_util_percentage=0.07</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=3684</TD>
-    <TD>slice_luts_util_percentage=17.71</TD>
+    <TD>slice_luts_used=3703</TD>
+    <TD>slice_luts_util_percentage=17.80</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=881</TD>
+    <TD>slice_registers_used=883</TD>
     <TD>slice_registers_util_percentage=2.12</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=2.12</TD>
     <TD>fully_used_lut_ff_pairs_used=65</TD>
@@ -598,8 +599,8 @@
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=3684</TD>
-    <TD>lut_as_logic_util_percentage=17.71</TD>
+    <TD>lut_as_logic_used=3703</TD>
+    <TD>lut_as_logic_util_percentage=17.80</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
@@ -607,28 +608,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=250</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=250</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=231</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=243</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=243</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=239</TD>
     <TD>lut_flip_flop_pairs_available=20800</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=322</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=1.55</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=324</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=1.56</TD>
     <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=1192</TD>
-    <TD>slice_util_percentage=14.63</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=1177</TD>
+    <TD>slice_util_percentage=14.44</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=950</TD>
+    <TD>slicel_used=784</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=242</TD>
+    <TD>slicem_used=393</TD>
     <TD>unique_control_sets_used=46</TD>
     <TD>using_o5_and_o6_fixed=46</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=525</TD>
-    <TD>using_o5_output_only_fixed=525</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=521</TD>
+    <TD>using_o5_output_only_fixed=521</TD>
     <TD>using_o5_output_only_used=25</TD>
     <TD>using_o6_output_only_fixed=25</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=3134</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=3157</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -678,7 +679,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=2898966</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=2891335</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -688,15 +689,15 @@
     <TD>ctrls=46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=3578670</TD>
-    <TD>ff=881</TD>
+    <TD>estimated_expansions=3669858</TD>
+    <TD>ff=883</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=5</TD>
     <TD>high_fanout_nets=1</TD>
-    <TD>iob=48</TD>
-    <TD>lut=3947</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=5674</TD>
-    <TD>nets=6506</TD>
-    <TD>pins=34417</TD>
+    <TD>iob=50</TD>
+    <TD>lut=3962</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=5693</TD>
+    <TD>nets=6527</TD>
+    <TD>pins=34528</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -749,10 +750,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:02:57s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:03:52s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=715.492MB</TD>
-    <TD>memory_peak=963.305MB</TD>
+    <TD>memory_gain=720.262MB</TD>
+    <TD>memory_peak=965.348MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
